--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@next/font": "^14.2.15",
     "axios": "^1.7.9",
-    "framer-motion": "^11.18.0",
+    "framer-motion": "^11.18.2",
     "next": "^15.1.4",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-star-ratings": "^2.3.0",
     "slick-carousel": "^1.8.1",
@@ -29,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^19",
     "@types/react-lottie": "^1.2.10",
     "@types/react-slick": "^0.23.13",
